fix: google avatar style align

--- a/my-app/src/pages/LandingPage/LandingPage.scss
+++ b/my-app/src/pages/LandingPage/LandingPage.scss
@@ -62,7 +62,7 @@ body{
   .nav-avatar-img{
     width: 30px;
     object-fit: cover;
-    border-radius: 8px;
+    border-radius: 25px;
     cursor: pointer;
   }
   
