--- a/my-app/src/pages/MemberPage/ProfileRegion/ProfileRegion.scss
+++ b/my-app/src/pages/MemberPage/ProfileRegion/ProfileRegion.scss
@@ -56,7 +56,7 @@ $room-leave-select:#FF0000;
 .basic-info-avatar{
     width: 100%;
     object-fit: cover;
-    border-radius: 40px;
+    border-radius: 100px;
     cursor: pointer;
     height: 100%;
     transition: 0.3s;
